external-crates/move/crates/move-compiler/tests/mgo_mode/one_time_witness/init_unbound_type.exp
error[E03002]: unbound module
  ┌─ tests/mgo_mode/one_time_witness/init_unbound_type.move:2:20
  │
2 │     fun init(_ctx: who::TxContext) {}
  │                    ^^^ Unbound module alias 'who'

error[E03004]: unbound type
  ┌─ tests/mgo_mode/one_time_witness/init_unbound_type.move:7:17
  │
7 │     fun init(_: Who, _ctx: &mut mgo::tx_context::TxContext) {}
  │                 ^^^ Unbound type 'Who' in current scope

